kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: efarm-frontend-svc
  namespace: frontend
  labels:
    app: efarm-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: efarm-frontend
